--- a/notebooks/practice_01.ipynb
+++ b/notebooks/practice_01.ipynb
@@ -9,6 +9,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5d879b06",
+   "metadata": {},
+   "source": [
+    "Here, we’re going to see if the neuron we created in the notebook can already try to classify images.  \n",
+    "We have pictures of dogs and cats, and the goal is to correctly sort them into the \"dog\" or \"cat\" class.\n",
+    "\n",
+    "To do this, we’ll use **two datasets**: one for **training** the neuron, and one for **testing** it.\n",
+    "\n",
+    "> ### Why do we use two datasets?\n",
+    ">\n",
+    "> If we trained and tested on the same data, the neuron might just *memorize* the answers without really learning how to generalize.  \n",
+    "> \n",
+    "> By training on one set and testing on a different one, we check if the neuron truly **understands** how to recognize *new, unseen* images.\n",
+    ">\n",
+    "> It's just like preparing for an exam: practicing with exercises is great, but the real test is solving **new problems** you haven’t seen before!\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 148,
    "id": "5308289c",
@@ -60,13 +81,13 @@
    "id": "ffe8499b",
    "metadata": {},
    "source": [
-    "For the training dataset :\n",
+    "### For the training dataset:\n",
     "\n",
-    "Nous avons ici 1000 photos, de taile 64x64 pixels.\n",
+    "We have 1,000 photos, each of size **64×64 pixels**.\n",
     "\n",
-    "Il ya aussi 1000 etiquette (une etiquette par photo), soit de chat (etiquette 0), soit de chien (etiquette 1).\n",
+    "There are also 1,000 labels (one label per photo), either for a **cat** (label `0`) or a **dog** (label `1`).\n",
     "\n",
-    "Il y a 500 photos de chaque etiquette."
+    "There are **500 photos** for each label, so the dataset is balanced between cats and dogs.\n"
    ]
   },
   {
@@ -96,9 +117,11 @@
    "id": "83adcd96",
    "metadata": {},
    "source": [
-    "For the test dataset :\n",
+    "### For the test dataset:\n",
     "\n",
-    "Same procedure : 200 photos, 2 etiquettes, 100 photos for each."
+    "Same procedure: we have **200 photos**, with **two labels** (cats and dogs).\n",
+    "\n",
+    "There are **100 photos** for each label, so the test set is also balanced.\n"
    ]
   },
   {
@@ -106,7 +129,7 @@
    "id": "dae48931",
    "metadata": {},
    "source": [
-    "## Affichons les 10 premieres photos de ce data set."
+    "## Let's display the first 10 photos from the dataset.\n"
    ]
   },
   {
@@ -141,13 +164,16 @@
    "id": "058f2e6e",
    "metadata": {},
    "source": [
-    "Une question qui doit vous venir a l'esprit a ce momemt : commet fournir une photo a mon model de neurones artificiels ?\n",
+    "## How do we feed a photo into our artificial neuron model?\n",
     "\n",
-    "Easy. On considere chaque pixel de la photo comme une variable. la photo est de taille 64x64 pixels. il y a 64x64 = 4096 variables.\n",
+    "A good question you might be asking right now is: *How do we actually provide a photo to our neuron model?*\n",
     "\n",
-    "En parcouyrant de guahce a droite et de huat en bas les pixels de chaue photo, on a donc le dataset X = (x1, x2, ..., x4096) pour chaue photo.\n",
+    "**Easy.**  \n",
+    "We treat each pixel of the photo as a variable. Since each photo is **64×64 pixels**, that gives us **64×64 = 4096 variables**.\n",
     "\n",
-    "Ensuite ca ne change pas par rapport au notebook precedent, on appliquer sur X un modele mathematique, et predire si la photo est un chat ou un chien."
+    "By scanning the pixels from left to right and top to bottom, we build a dataset like this for each photo:  $X = (x_1, x_2, \\dots, x_{4096})$ where each variable is a pixel.\n",
+    "\n",
+    "From there, it's just like in the previous notebook: we apply a mathematical model to $X$, and predict whether the photo is a **cat** or a **dog**.\n"
    ]
   },
   {
@@ -155,11 +181,20 @@
    "id": "c2c34952",
    "metadata": {},
    "source": [
-    "Demarche a suivre pour effectuer une telle prediction :\n",
-    "1) Normaliser le dataset. Chaque pixel est code sur 8 bits. 2^8 = 256. il faut normaliser ces valeur entre 0 et 1.\n",
-    "2) Transformer chaque image (64x64 pixels) en une sequence de variable (X = (x1, x2, ..., x4096))\n",
-    "3) Entrainer le modele sur train_set\n",
-    "4) Evaluer le modele sur test_set"
+    "## Steps to follow to make a prediction:\n",
+    "\n",
+    "1. **Normalize the dataset.**  \n",
+    "   Each pixel is coded on 8 bits. Since $2^8 = 256$, we need to normalize the pixel values between 0 and 1.\n",
+    "\n",
+    "2. **Transform each image (64×64 pixels)**  \n",
+    "   into a sequence of variables:  \n",
+    "   $X = (x_1, x_2, \\dots, x_{4096})$\n",
+    "\n",
+    "3. **Train the model**  \n",
+    "   on the **train_set**.\n",
+    "\n",
+    "4. **Evaluate the model**  \n",
+    "   on the **test_set**.\n"
    ]
   },
   {
@@ -167,18 +202,13 @@
    "id": "09c0adc9",
    "metadata": {},
    "source": [
-    "# 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 153,
-   "id": "a68a3a11",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# normalize the data\n",
-    "#X_train = X_train.astype('float32') / 255.0"
+    "# 1&2. Let's tranform and normalize at the same time\n",
+    " \n",
+    "Each pixel value originally goes from 0 to 255 (since it's coded on 8 bits).  \n",
+    "To normalize, we simply **divide every pixel value by 255** so that all values are between **0 and 1**.\n",
+    "\n",
+    "At the same time, we **reshape** each image:  \n",
+    "Instead of a 64×64 grid for each image, we flatten it into a **single vector** with **4096 variables**.\n"
    ]
   },
   {
@@ -186,7 +216,7 @@
    "id": "2afe1928",
    "metadata": {},
    "source": [
-    "On veut faire un truc du genre :"
+    "We want to do something like this:\n"
    ]
   },
   {
@@ -221,9 +251,12 @@
    "id": "5e867de2",
    "metadata": {},
    "source": [
-    "On voit bien 2 choses :\n",
-    "1) On a normaliser chaque pixel\n",
-    "2) on a bien un tableau d'entree de 1000 par 4096 dont : chaque ligne represnete une image (1000 images), chaque i-eme colonne les pixels numero i de chacune des 1000 images."
+    "We can observe two things:\n",
+    "\n",
+    "1. We have **normalized** each pixel.\n",
+    "2. We have a **1000 x 4096 input array**, where:\n",
+    "   - Each **row** represents an image (1000 images in total).\n",
+    "   - Each **i-th column** represents the i-th pixel across all 1000 images.\n"
    ]
   },
   {
@@ -231,7 +264,7 @@
    "id": "5b92f139",
    "metadata": {},
    "source": [
-    "Mais une maniere data science de le faire c'est en appelent directement une fonction pour faire le reshape :"
+    "But a **data science way** to do this is by directly calling a function to perform the reshape:\n"
    ]
   },
   {
@@ -249,31 +282,7 @@
    "id": "732df9ab",
    "metadata": {},
    "source": [
-    "Pour ceux qui connaissent bien Python :"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 156,
-   "id": "49bb2e65",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1000, 4096)\n",
-      "(200, 4096)\n",
-      "[164 174 163 ...  87 180  39]\n"
-     ]
-    }
-   ],
-   "source": [
-    "X_train_reshape = X_train.reshape(X_train.shape[0], -1)\n",
-    "X_test_reshape = X_test.reshape(X_test.shape[0], -1)\n",
-    "print(X_train_reshape.shape)\n",
-    "print(X_test_reshape.shape)\n",
-    "print(X_train_reshape[0])"
+    "For those who are familiar with Python:\n"
    ]
   },
   {
@@ -310,7 +319,9 @@
    "source": [
     "## Why is it important to normalize our data in data science?\n",
     "\n",
-    "Imagine you're in a band, and you're doing a sound check before a concert. Each instrument — drums, guitar, vocals — plays its part. But if the drums are way louder than everything else, they overpower the mix. That doesn't mean the drums are more important — every instrument has its role to play. In data science, it’s the same: if one feature has bigger numbers than the others, the model might \"hear\" it more, but that doesn’t make it more important than the rest. Normalization is like adjusting the sound levels so that every instrument — or feature — is balanced. That way, the model listens to the whole band, not just the loudest player.\n",
+    "Imagine you're in a band, and you're doing a sound check before a concert. Each instrument — drums, guitar, vocals — plays its part. But if the drums are way louder than everything else, they overpower the mix. That doesn't mean the drums are more important — every instrument has its role to play. \n",
+    "\n",
+    "In data science, it’s the same: if one feature has bigger numbers than the others, the model might \"hear\" it more, but that doesn’t make it more important than the rest. Normalization is like adjusting the sound levels so that every instrument — or feature — is balanced. That way, the model listens to the whole band, not just the loudest player.\n",
     "\n",
     "### In one sentence: we normalize to be fair."
    ]
@@ -320,12 +331,12 @@
    "id": "b6c0dfa5",
    "metadata": {},
    "source": [
-    "Maintenant il est temps d'entrainer le modele sur les donnees d'entrainement"
+    "## 3. Now it's time to train the model on the training data.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": null,
    "id": "fdf29df1",
    "metadata": {},
    "outputs": [
@@ -1365,8 +1376,6 @@
     }
    ],
    "source": [
-    "# entrainement du modele :\n",
-    "\n",
     "W, b = artificial_neuron(X_train_reshape, y_train, learning_rate=0.1, num_iter=100)"
    ]
   },
@@ -1375,16 +1384,29 @@
    "id": "28eb8b41",
    "metadata": {},
    "source": [
-    "Il y a une premiere erreur qui nous dit qu'on divise par 0 dans un log. Il y a un log dans la fonction loss, qui prend en argument la fonction A, aui elle meme prend en argument la fonction Z dans une exponontielle. la fonction exponentielle est l'une des fonctions qui croit le plus vite, donc un nombre assez grand (meme pas 200) suffit a depasser la puissance de calcul d'un ordi. Pour vous la faire courte, une pratique courante en data science est alors d'utiliser une regularisation en introduisant un petit epsilon (siffemment petit pour ne pas perturber la prediction) qui vient ce probleme. Codons pour mieux comprendre :"
+    "We’re getting an error that says we’re dividing by 0 inside a log function.  \n",
+    "\n",
+    "Let’s break it down:\n",
+    "\n",
+    "There’s a `log` involved in the loss function, which itself depends on `A`, and `A` is based on `Z` through an **exponential**.  \n",
+    "Now, remember: the exponential function grows *extremely* fast.  \n",
+    "Even a value around 200 can be enough to completely blow up the computation (way beyond what a computer can handle without overflowing).\n",
+    "\n",
+    "Long story short:  \n",
+    "In data science, a very common trick to fix this is to add a tiny constant (called **epsilon**, usually something like 1e-15) to avoid taking the log of zero.  \n",
+    "It’s small enough that it doesn’t mess up the results but big enough to avoid errors.\n",
+    "\n",
+    "Let’s see it in code to make it super clear:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
    "id": "ee37518b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# the problem is in log_loss, look at now in the log :\n",
     "def log_loss(A, y):\n",
     "    m = len(y)\n",
     "    epsilon = 10e-15\n",
