--- a/notebooks/theory.ipynb
+++ b/notebooks/theory.ipynb
@@ -2,6 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "070ae593",
+   "metadata": {},
+   "source": [
+    "Un reseau de neurone, c'est un reseau, de neurones. Comprenons alors comment fonctionne un neurone pour comprendre fonctione le reseau ensuite.\n",
+    "\n",
+    "On peut arreter toute la theorie ici on disant le chose la plus importante de l'IA : le neurone n'est qu'une fonction lineaire.\n",
+    "\n",
+    "Au debut de votre experience dans l'IA, lors de vos premiers modele de deep learning, beaucoup de vos questions seront repondus en vous remmeorrant que le neurone est fonction lineaire. garder toujours ca en tete.\n",
+    "\n",
+    "\n",
+    "Par contre le modele mathematique du neurone, lui, c'est different. On parle du neurone et du modele et c'est de la que vient la confusion. Donc Deuxieme chose la plus importante de l'IA : l'architecture d'un modele d'un neurone artificel est toujours la meme. toujours la meme.\n",
+    "\n",
+    "Voici cette architecture :\n",
+    "1) un modele mathematique aui traite les donnes d'entrees\n",
+    "2) une fonction d'activation\n",
+    "3) une mesure de performance\n",
+    "4) une optimisation de cette performance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5054f199",
    "metadata": {},
    "source": [
@@ -26,6 +47,12 @@
     "\\left[\\frac{\\partial \\mathcal{Z}}{\\partial u_2}=\\frac{-x_2}{m} \\sum_i\\left(y_i-\\alpha_i\\right)\\right]\n",
     "$$\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e95fbeb",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
