--- a/notebooks/practice_00.ipynb
+++ b/notebooks/practice_00.ipynb
@@ -709,6 +709,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ae237225",
+   "metadata": {},
+   "source": [
+    "Gift for those who download and run this notebook :"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "id": "d7767feb",
@@ -2570,8 +2578,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "79836d87",
+   "metadata": {},
+   "source": [
+    "For those who don't, no worries :"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "06b6b61b",
    "metadata": {},
    "outputs": [
@@ -2596,14 +2612,14 @@
     }
    ],
    "source": [
-    "%pip install -U kaleido\n",
+    "#%pip install -U kaleido\n",
     "\n",
     "\n",
     "import plotly.graph_objects as go\n",
     "import numpy as np\n",
     "from IPython.display import Image\n",
     "\n",
-    "# Construction de la figure\n",
+    "\n",
     "X0 = np.linspace(X[:, 0].min(), X[:, 0].max(), 100)\n",
     "X1 = np.linspace(X[:, 1].min(), X[:, 1].max(), 100)\n",
     "xx0, xx1 = np.meshgrid(X0, X1)\n",
@@ -2621,10 +2637,10 @@
     "fig.update_layout(template=\"plotly_dark\", margin=dict(l=0, r=0, b=0, t=0))\n",
     "fig.layout.scene.camera.projection.type = \"orthographic\"\n",
     "\n",
-    "# Sauvegarde la figure en image\n",
+    "\n",
     "fig.write_image(\"figure.png\")\n",
     "\n",
-    "# Affiche l'image dans le notebook\n",
+    "\n",
     "Image(\"figure.png\")\n"
    ]
   },
