--- a/notebooks/practice_00.ipynb
+++ b/notebooks/practice_00.ipynb
@@ -2582,7 +2582,7 @@
    "id": "79836d87",
    "metadata": {},
    "source": [
-    "For those who don't, no worries :"
+    "## For those who don't, no worries :"
    ]
   },
   {
