--- a/notebooks/theory_00.ipynb
+++ b/notebooks/theory_00.ipynb
@@ -36,30 +36,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c60e5bed",
-   "metadata": {},
-   "source": [
-    "C'est l'architecture commune a tout les neurones (et donc reseau de neurones). Ce qui change, c'est son contenu. Selon le modele mathematique du neurone (1), le modele mathematique de sa fonction d'activation (2), le modele mathematique de mesure de performance (3) et le modele mathematique de l'optimisation de cette performance (4) qui change.\n",
-    "\n",
-    "Il faut donc comprendre comment fonctionne cette architecture avec un exmple pour comprendre le fonctionnement de n'importe quel neurone.\n",
-    "\n",
-    "Alors prenons un exemple ;)\n",
-    "\n",
-    "On va regarder comment fonctionne les maths derriere cette architecture un prenant un modele de classification binaire. N'ayez pas peur des termes, ils couleront de sens par la suite. CE qu'il faut comprendre, c'est que ce modele permet de separer lineairement deux classes.\n",
-    "\n",
-    "imaginer que l'on ait deux types de plantes des plantes toxiques que l'on note y égal 1 et d'autres non toxique que l'on note y égal à zéro.\n",
-    "\n",
-    "un jour on décide de mesurer certains attributs de ces plantes telles que la longueur et la largeur de leurs feuilles que l'on note x1 et x2 représentant les résultats dans un graphique on observe que les deux classes de plantes sont linéairement séparables\n",
-    "\n",
-    "on peut donc développé un modèle capable de prédire à quelle classe appartient une future plantes en se basant sur cette droite"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "aa245133",
    "metadata": {},
    "source": [
     "# Example: A Simple Binary Classification Problem\n",
+    "\n",
+    "We will look at how the math behind this architecture works by taking a binary classification model. Don't be afraid of the terms, they will make sense later. What you need to understand is that this model allows for linearly separating two classes.\n",
     "\n",
     "Suppose we have two types of plants:\n",
     "- Toxic plants (labeled $y = 1$)\n",
@@ -74,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "cd82efe7",
    "metadata": {},
    "outputs": [
@@ -113,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "5f24c5e5",
    "metadata": {},
    "outputs": [
@@ -191,13 +173,13 @@
     "# Graph of the Sigmoid Function\n",
     "\n",
     "Let's visualize the sigmoid function and highlight a specific point. \\\n",
-    "Imagine we have a plant that lies in the orange zone of the graph above. The output of the neuron will be positive. Let's assume that its output value is $z = 1.5 \\). By applying the sigmoid function, we get the following result. \\\n",
+    "Imagine we have a plant that lies in the orange zone of the graph above. The output of the neuron will be positive. Let's assume that its output value is $z = 1.5$. By applying the sigmoid function, we get the following result. \\\n",
     "The plant is positioned here on the sigmoid function graph:\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "6ff4a9aa",
    "metadata": {},
    "outputs": [
@@ -413,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "fdd8c13c",
    "metadata": {},
    "outputs": [
@@ -441,10 +423,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef408cf5",
+   "id": "39a18019",
    "metadata": {},
    "source": [
-    "la dérive et d'une fonction ça nous indique comment est-ce que cette fonction varie. Si quand w augmente le derivee est negative, ça veut dire que la fonction diminue et qu'il falloir augmenter w si on veur minimiser la fonction coût. a l'inverse si la dérivée est positive, ça veut dire que la fonction augmente et qu'il faut diminuer w pour minimiser la fonction coût."
+    "The derivative of a function indicates how that function changes. If, when $w$ increases, the derivative is negative, it means the function is decreasing and we need to increase $w$ in order to minimize the cost function. Conversely, if the derivative is positive, it means the function is increasing, and we need to decrease $w$ to minimize the cost function.\n"
    ]
   },
   {
@@ -452,19 +434,25 @@
    "id": "b59ff9dd",
    "metadata": {},
    "source": [
-    "On va alors calculer la dérivée de la fonction coût par rapport à w et b.\n",
+    "We will now calculate the derivative of the cost function with respect to $w$ and $b$.\n",
+    "\n",
     "$$\n",
     "\\nabla L(W, b) = \\left( \\frac{\\partial L}{\\partial W}, \\frac{\\partial L}{\\partial b} \\right)\n",
     "$$\n",
-    "où L est la fonction de coût, W est le vecteur des poids et b est le biais.\n",
-    "On va ensuite mettre à jour les paramètres w et b en fonction du gradient :\n",
+    "\n",
+    "where $L$ is the cost function, $W$ is the weight vector, and $b$ is the bias.\n",
+    "\n",
+    "Next, we will update the parameters $W$ and $b$ based on the gradient:\n",
+    "\n",
     "$$\n",
     "W = W - \\alpha \\cdot \\frac{\\partial L}{\\partial W}\n",
     "$$\n",
+    "\n",
     "$$\n",
     "b = b - \\alpha \\cdot \\frac{\\partial L}{\\partial b}\n",
     "$$\n",
-    "où α est le taux d'apprentissage."
+    "\n",
+    "where $\\alpha$ is the learning rate.\n"
    ]
   },
   {
@@ -472,7 +460,7 @@
    "id": "2d8274ae",
    "metadata": {},
    "source": [
-    "On voit bien ici que la mise à jour des paramètres w et b dépend de la dérivée de la fonction coût par rapport à w et b. relisez la phrase d'explications plus haut si besoin."
+    "We can clearly see here that the update of the parameters $w$ and $b$ depends on the derivative of the cost function with respect to $w$ and $b$. Refer to the explanation above if needed.\n"
    ]
   },
   {
@@ -480,13 +468,13 @@
    "id": "92e885df",
    "metadata": {},
    "source": [
-    "Ola ola... attendez.. Ca y est on a fini l'architecture du neurone !\n",
+    "Ola ola... wait.. We've finished the neuron architecture!\n",
     "\n",
-    "On vientt de voir : \n",
-    "1) un modele mathematique qui traite les donnes d'entrees : le modele lineaire de classification binaire\n",
-    "2) une fonction d'activation : la fonction sigmoide\n",
-    "3) une mesure de performance (ou fonction de coût) : la log-loss\n",
-    "4) une optimisation de cette performance : la descente de gradient"
+    "Here's what we've just covered:\n",
+    "1) A mathematical model that processes the input data: the linear binary classification model\n",
+    "2) An activation function: the sigmoid function\n",
+    "3) A performance measure (or cost function): the log-loss\n",
+    "4) An optimization of this performance: gradient descent\n"
    ]
   },
   {
@@ -494,11 +482,11 @@
    "id": "12d6f6e4",
    "metadata": {},
    "source": [
-    "MAIS vous n'avez pas encore compris comment fonctionne cette architecture. Mais ne vous inquietez pas, c'est normal. On va le voir ensemble.\n",
+    "BUT you haven't yet understood how this architecture works. But don't worry, it's normal. We're going to go through it together.\n",
     "\n",
-    "Pour comprendre comment fonctionne cette architecture, il faut implementer toutes ces fonctions dans une boucle d'apprentissage qui sera alors d'apprendre : exactement ce que fait un neurone.\n",
+    "To understand how this architecture works, we need to implement all these functions in a learning loop, which will then learn: exactly what a neuron does.\n",
     "\n",
-    "POur ca il va nous falloir connaître l'expression de ces fameux gradient ceux qui interviennent dans la descente de gradient. C'est des maths, c'est pas drole, mais c'est important. On va donc les calculer ensemble, pas à pas."
+    "For this, we need to know the expression of these famous gradients that come into play in gradient descent. It's math, it's not fun, but it's important. So, let's calculate them together, step by step.\n"
    ]
   },
   {
@@ -506,14 +494,12 @@
    "id": "7eeceed4",
    "metadata": {},
    "source": [
-    "Pour cela, on va partir de la fonction de coût et on va calculer les gradients par rapport à w et b. On va donc dériver la fonction de coût par rapport à w et b.\n",
+    "To do this, we will start from the cost function and calculate the gradients with respect to $w$ and $b$. Specifically, we need to calculate these 3 gradients:\n",
+    "1) The gradient of the cost function with respect to $w_1$\n",
+    "2) The gradient of the cost function with respect to $w_2$\n",
+    "3) The gradient of the cost function with respect to $b$\n",
     "\n",
-    "Plus precisement, il faut au'on calclule ces 3 gradients :\n",
-    "1) le gradient de la fonction de coût par rapport à w1\n",
-    "2) le gradient de la fonction de coût par rapport à w2\n",
-    "3) le gradient de la fonction de coût par rapport à b\n",
-    "\n",
-    "En terme mathematiques, on va donc calculer les gradients suivants :\n",
+    "In mathematical terms, we are going to calculate the following gradients:\n",
     "$$\n",
     "\\frac{\\partial L}{\\partial w_1}, \\frac{\\partial L}{\\partial w_2}, \\frac{\\partial L}{\\partial b}\n",
     "$$\n"
@@ -524,8 +510,10 @@
    "id": "2d95a1ef",
    "metadata": {},
    "source": [
-    "POur cela, on va utiliser la regle de la chaine. La regle de la chaine, c'est une regle de derivation qui nous permet de calculer la derivee d'une fonction composee. En gros, si on a une fonction f(g(x)), on peut calculer la derivee de f par rapport à x en multipliant la derivee de f par rapport à g par la derivee de g par rapport à x.\n",
-    "On va donc appliquer la regle de la chaine à notre fonction de coût. On va donc calculer les gradients suivants :\n",
+    "To do this, we will use the chain rule. The chain rule is a differentiation rule that allows us to calculate the derivative of a composed function. In simple terms, if we have a function $f(g(x))$, we can calculate the derivative of $f$ with respect to $x$ by multiplying the derivative of $f$ with respect to $g$ by the derivative of $g$ with respect to $x$.\n",
+    "\n",
+    "We will apply the chain rule to our cost function. Therefore, we will calculate the following gradients:\n",
+    "\n",
     "$$\n",
     "\\frac{\\partial L}{\\partial w_1} = \\frac{\\partial L}{\\partial a} \\cdot \\frac{\\partial a}{\\partial z} \\cdot \\frac{\\partial z}{\\partial w_1}\n",
     "$$\n",
@@ -542,12 +530,13 @@
    "id": "ed7a15ed",
    "metadata": {},
    "source": [
-    "On y va pour le premier. On veut obtenir ce calcul :\n",
+    "Let's go for the first one. We want to compute the following:\n",
+    "\n",
     "$$\n",
     "\\frac{\\partial L}{\\partial w_1} = \\frac{\\partial L}{\\partial a} \\cdot \\frac{\\partial a}{\\partial z} \\cdot \\frac{\\partial z}{\\partial w_1}\n",
     "$$\n",
     "\n",
-    "En reprenant les expresisons de chaque fonctions, voici les formules de chaque gradient:\n",
+    "By taking the expressions of each function, here are the formulas for each gradient:\n",
     "\n",
     "$$\n",
     "\\frac{\\partial L}{\\partial a} = \\frac{-1}{N} \\sum_{i=1}^{N} \\left( y_i \\cdot \\frac{1}{a(z_i)} - (1 - y_i) \\cdot \\frac{1}{1 - a(z_i)} \\right)\n",
@@ -565,7 +554,7 @@
    "id": "5054f199",
    "metadata": {},
    "source": [
-    "On peut alors commencer le developpement :\n",
+    "We can now begin the development:\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -578,11 +567,11 @@
     "& =-\\frac{x_1}{m} \\sum_i^m\\left(y_i-a_i\\right) \\\\\n",
     "\\end{aligned}\n",
     "$$\n",
-    "Ainsi, on obtient le gradient de la fonction de coût par rapport à w1 :\n",
+    "Thus, we obtain the gradient of the cost function with respect to $w_1$:\n",
     "$$\n",
     "\\left[\\frac{\\partial \\mathcal{L}}{\\partial w_1}=-\\frac{x_1}{m} \\sum_i\\left(y_i-a_{i}\\right)\\right]\n",
     "$$\n",
-    "De la meme maniere, on peut calculer le gradient de la fonction de coût par rapport à w2 :\n",
+    "Similarly, we can calculate the gradient of the cost function with respect to $w_2$:\n",
     "$$\n",
     "\\left[\\frac{\\partial \\mathcal{L}}{\\partial w_2}=-\\frac{x_2}{m} \\sum_i\\left(y_i-a_{i}\\right)\\right]\n",
     "\n",
@@ -595,13 +584,12 @@
    "id": "2e95fbeb",
    "metadata": {},
    "source": [
-    "Pour le gradient de la fonction de coût par rapport à b, il suffit de voir que :\n",
-    "\n",
+    "For the gradient of the cost function with respect to $b$, we can observe that:\n",
     "$$\n",
     "\\frac{\\partial z}{\\partial b} = 1\n",
     "$$\n",
     "\n",
-    "En rereprenant la meme demarche que pour les autres gradients, on obtient tout de suite :\n",
+    "By following the same approach as for the other gradients, we obtain the gradient of the cost function with respect to $b$ as:\n",
     "$$\n",
     "\\left[\\frac{\\partial \\mathcal{L}}{\\partial b}=-\\frac{1}{m} \\sum_i\\left(y_i-a_{i}\\right)\\right]\n",
     "$$"
@@ -612,8 +600,9 @@
    "id": "8fe815b7",
    "metadata": {},
    "source": [
-    "Et voila, on a tous les gradients de la fonction de coût par rapport à w et b. On peut donc les utiliser pour mettre à jour les paramètres w et b dans la boucle d'apprentissage.\n",
-    "On va donc mettre à jour les paramètres w et b en fonction des gradients :\n",
+    "And there you have it, we now have all the gradients of the cost function with respect to $w$ and $b$. We can now use these gradients to update the parameters $w$ and $b$ during the learning loop.\n",
+    "\n",
+    "We will update the parameters $w$ and $b$ using the following formulas:\n",
     "$$\n",
     "W = W - \\alpha \\cdot \\frac{\\partial L}{\\partial W}\n",
     "$$\n",
@@ -627,9 +616,9 @@
    "id": "c176bda6",
    "metadata": {},
    "source": [
-    "Ca y est !! bon c'etait vraiment la partie la plus dure a comprendre.\n",
+    "That's it!! Phew, this was really the hardest part to understand.\n",
     "\n",
-    "Desormais il ne reste plus qu'à coder tout ça dans une boucle d'apprentissage, c'est beaucoup plus simple vous allez voir.\n"
+    "Now, all that's left is to code everything into a learning loop. It’s much simpler now, you’ll see.\n"
    ]
   },
   {
@@ -637,7 +626,7 @@
    "id": "413b4fa8",
    "metadata": {},
    "source": [
-    "Rendez-vous sur le notebook practice_00 pour coder un neurone capable de classifier des plantes toxiques et non toxiques !"
+    "Head over to the practice_00 notebook to code thsi very same neuron capable of classifying toxic and non-toxic plants!"
    ]
   }
  ],
