--- a/notebooks/practice_02.ipynb
+++ b/notebooks/practice_02.ipynb
@@ -9,10 +9,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "3301deee",
-   "metadata": {},
-   "source": []
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "058451ec",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def initialisation(n0, n1, n2):\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
