--- a/notebooks/theory_00.ipynb
+++ b/notebooks/theory_00.ipynb
@@ -5,7 +5,7 @@
    "id": "070ae593",
    "metadata": {},
    "source": [
-    "# Introduction: What is a Neural Network?\n",
+    "# What is a Neural Network?\n",
     "\n",
     "A neural network is... a network of neurons.\n",
     "So let's first understand how a single neuron works, before understanding how the network works.\n",
