--- a/notebooks/theory_02.ipynb
+++ b/notebooks/theory_02.ipynb
@@ -73,7 +73,7 @@
    "id": "90698209",
    "metadata": {},
    "source": [
-    "# Let's go"
+    "## Let's go"
    ]
   },
   {
@@ -598,7 +598,7 @@
    "source": [
     "To finish with this neural, we can add the last layer with one neuron, which will be the output neuron.\n",
     "\n",
-    "### Output Layer\n",
+    "### Output Layer and Final Output\n",
     "The output layer is the last layer of the neural network. It takes the output of the last hidden layer and produces the final output of the neural network.\n",
     "\n",
     "The output layer can have one or more neurons, depending on the problem we are trying to solve. In this case, we will have one neuron in the output layer."
@@ -654,7 +654,7 @@
    "id": "54c693be",
    "metadata": {},
    "source": [
-    "In other wrods :\n",
+    "In other words :\n",
     "> adding neuron = playing with existant weight matrix and bias vector. \\\n",
     "> adding layer = creating a new weight matrix and bias vector."
    ]
@@ -671,6 +671,63 @@
     "\n",
     ">We use matrices because they allow us to represent and compute multiple neuron operations in parallel using linear algebra. Each layer of a neural network involves computing a weighted sum of inputs for each neuron — and matrix multiplication lets us do all those computations in one go.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "016a2e55",
+   "metadata": {},
+   "source": [
+    "## Forward Propagation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d659cdd5",
+   "metadata": {},
+   "source": [
+    "The process of passing the input data through the neural network to obtain the final output is called forward propagation. \\\n",
+    "In forward propagation, we compute the output of each layer in sequence, starting from the input layer and moving through the hidden layers to the output layer. \\\n",
+    "The final output of the neural network is the output of the last layer, which can be used for prediction or classification tasks.\n",
+    "\n",
+    "> This is what we've just done: we passed the input data through the neural network to obtain the final output.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef24d783",
+   "metadata": {},
+   "source": [
+    "But now we need to train the neural network, how to do that?\n",
+    "Easy peasy, you know how to do that. How did we train our first neuron? The perceptron model? remember?\n",
+    "\n",
+    "We defined a loss function, and we used gradient descent to minimize the loss function by updating the weights and biases (the parameters) of the neuron.\n",
+    "\n",
+    "Why not do the same thing here? What changed?\n",
+    "\n",
+    "I will give you two answers:\n",
+    "1. nothing\n",
+    "2. matrix\n",
+    "\n",
+    "So we are going to do the same thing, but with matrices."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c1d43d2",
+   "metadata": {},
+   "source": [
+    "## Backpropagation\n",
+    "The process of updating the weights and biases of the neural network to minimize the loss function is called backpropagation.\n",
+    "\n",
+    "And we are to proceed in the same way as we did for the perceptron model.\n",
+    "We will define a loss function, compute the gradients of the loss function with respect to the weights and biases, and update the weights and biases using gradient descent to minimize this loss."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a834f54",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
